[project]
name = "reflex"
version = "0.1.0"
description = "Talk-to-your-data service with a self-correcting SQL loop."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "google-genai==1.46.0",
    "sqlglot==26.1.3",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reflex"]
